Bottom bar z-index fix
Show bottom bar over map (and it's controls) but under material dialogs.
Moved z-index to common variables where other such variables are.

--- a/frontend/src/app/feature/common/bottom-bar/bottom-bar.component.scss
+++ b/frontend/src/app/feature/common/bottom-bar/bottom-bar.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/variables';
+
 :host {
   display: block;
   margin-top: 70px;
@@ -12,7 +14,7 @@
   text-align: center;
   box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, 0.15);
   margin: 0;
-  z-index: 1;
+  z-index: $bottom-bar-z;
 }
 
 .bottom-bar-content {
