--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -6,3 +6,4 @@ $mat-font-family: Roboto, 'Helvetica Neue', sans-serif !default;
 
 $map-spinner: 401;
 $map-controls: 402;
+$bottom-bar-z: 403;
